# chemistry

./: .coveragerc  .env  .env.template  .gitignore  Dockerfile  LICENSE  Makefile  Makefile.ps1  README.md  azure-pipelines.yml  copier.yml  docker-compose.base.yml  docker-compose.db.yml  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  docker-compose_.yml  kibana.yml  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  test-output.xml
.github/workflows/: issue-manager.yml  smokeshow.yml  test-coverage.yaml  test.yml  upload-test.yml
app/: constants.py  main.py  models.py
app/core/recommendation/: algorithms.py  constants.py  metrics.py  models.py
app/routes/: recommendation.py  security.py
app/services/: jwt.py
app/utils/: file.py  statistics.py
assets/: pedidos_client2_mais_vendidos.xlsx
backend/: Dockerfile  __init__.py  backend_pre_start.py  exceptions.py  initial_data.py  main.py  pyproject.toml  pytest.ini  requirements.txt  tests-start.sh  tests_pre_start.py
backend/api/: constants.py
backend/api/dependencies/: auth.py  services.py  users.py
backend/api/models/: base.py
backend/api/routes/: auth.py  file.py  setup.py
backend/app/: __init__.py  app.py  backend_pre_start.py  exceptions.py  initial_data.py  main.py  tests_pre_start.py
backend/app/alembic/: env.py
backend/app/api/: __init__.py  constants.py  exceptions.py  main.py
backend/app/core/: app.py  config.py  logging.py
backend/app/db/: __init__.py  base.py  exceptions.py  types.py
backend/app/models/: token.py  users.py
backend/app/redis/: sub.py
backend/app/services/: users.py
backend/app/utils/: email.py  native.py  security.py
backend/core/: app.py  config.py  logging.py
backend/scheduler/tasks/: logs_clean_task.py
backend/services/: users.py
backend/storage/db/: __init__.py  utils.py
backend/tests/: conftest.py  utils.py
backend/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/tests/services/: test_user.py
backend/tests/utils/: test_file.py  test_native.py  test_routes.py  test_security.py
backend/utils/: email.py  native.py  security.py
data/: .~lock.huge_order_sample.xlsx#  medium_order_sample.xlsx  medium_test_sample.xlsx  pedidos_cliente_3.xlsx  pedidos_mais_vendidos.xlsx  small_order_sample.xlsx  small_test_sample.csv  small_test_sample.xlsx
frontend/: analise_apriori.py  constants.py  main.py
frontend/data/: Apriori_Regras_Manha.csv  produtos_mais_vendidos.csv
frontend/utils/: dataframe.py  streamlit.py
notebook/: API_adhoc_experiments.ipynb  medium_order_sample.xlsx  small_order_sample.xlsx
recommendation/: Analisador de Vendas e Sugestões para Cesta.pptx  requirements.txt  reuniao_vitor.txt  sugestoes_alessandro.txt
recommendation/data/: pedidos_cliente_2.xlsx  pedidos_cliente_4.xlsx
scripts/: build-push.sh  build.sh  clean_packages.py  create_test_db.sh  deploy.sh  get-pip.py  packages_clean.py  run-tests.sh  run.sh  run_doctests.py  test-local.sh  watch_tests.sh
scripts/utils/: clean_packages.py  convert_to_poetry.py  run_doctests.py
src/: __init__.py  app.py  app_factory.py  config.py  constants.py  custom_middlewares.py  database.py  exceptions.py  logging.py  main.py  models.py  scheduler.py
src/api/: app.py  config.py  constants.py  dependencies.py  main.py  models.py
src/api/base/: models.py
src/api/endpoints/: auth.py  file.py  recommendation.py  setup.py  signup.py
src/api/routes/: auth.py  file.py  recommendation.py  setup.py
src/api/services/: jwt.py  providers.py
src/api/setup/: logging.py  scheduler.py
src/api/tasks/: logs_clean_task.py  print_task.py  recommendation_task.py
src/api/utils/: constants.py  file.py  logs.py  misc.py  native.py  routes.py  security.py
src/app/: main.py
src/app/routes/: recommendation.py
src/app/services/: jwt.py
src/app/utils/: native.py
src/backend/: main.py
src/backend/routes/: recommendation.py  security.py
src/backend/utils/: constants.py  dataframe.py  file.py
src/base/: exceptions.py  models.py
src/core/: config.py  gunicorn_config.py  security.py
src/core/recommendation/: algorithms.py  constants.py  extract_transform.py  itemset_factory.py  itemset_generator.py  metrics.py  models.py  schemas.py  utils.py
src/database/: create_tables.sql  create_tables.txt  engine.py  migrate.py  models.py  repositories.py  repository.py  schemas.py  session.py  utils.py
src/database/base/: repository.py
src/db/: engine.py  migrate.py  repositories.py  schemas.py  session.py  utils.py
src/db/base/: repository.py
src/dependencies/: auth.py  services.py  users.py
src/frontend/: core.py  requirements.txt
src/models/: __init__.py  api_model.py  base.py  token.py  users.py
src/redis/: pub.py  sub.py
src/routes/: auth.py  constants.py  exceptions_handlers.py  file.py  monitoring.py  recommendation.py  security.py  setup.py  signup.py
src/scheduler/: __init__.py  schedule.py
src/services/: __init__.py  dependencies.py  jwt.py  security.py  users.py
src/setup/: core.py  logging.py  scheduler.py
src/tasks/: print_task.py  recommendation_task.py
src/utils/: constants.py  dataframe.py  file.py  itemset_generator.py  logs.py  native.py  routes.py  security.py  statistics.py
tests/: conftest.py  recommender_request_tests.postman_collection.json  test_app.py  test_fastapi.py  test_routes.py  test_utils_dataframe.py  test_utils_file.py  test_utils_native.py
tests/api/: test_api_models.py
tests/core/: test_algorithms.py  test_et.py  test_itemgenerator.py  test_metrics.py  test_models.py  test_utils.py
tests/database/: test_db_core.py
tests/db/: test_db_core.py
tests/routes/: test_app.py  test_setup.py
tests/services/: test_services_users.py
tests/test_routes/: test_setup.py
tests/test_services/: test_services_users.py
tests/test_utils/: test_file.py  test_native.py  test_routes.py  test_security.py
tests/utils/: test_dataframe.py  test_file.py  test_native.py  test_routes.py  test_statistics.py
(+94 files in other folders)
