[tool.poetry]
name = "fastapi-API"
version = "0.0.1"
description = "A minimal repository for a FastAPI app instance with SQLAlchemy and redis database"
authors = ["Bruno Peixoto <brunolnetto@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dev-dependencies]
black = { version = "24.4.1" }
codecov = { version = "2.1.13" }
pytest-asyncio = { version = "0.23.6" }
pytest-mock = { version = "3.14.0" }
pytest-watch = { version = "4.2.0" }

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
a2wsgi = { version = "1.10.4" }
apscheduler = { version = "3.10.4" }
aiohttp = { version = "3.9.3" }
aioredis = { version = "2.0.1" }
alembic = { version = "1.13.1" }
argcomplete = { version = "3.2.3" }
asyncpg = { version = "0.29.0" }
cloudpickle = { version = "3.0.0" }
connexion = { version = "2.14.2" }
databases = { version = "0.9.0" }
dill = { version = "0.3.8" }
email-validator = { version = "2.1.1" }
execnet = { version = "2.0.2" }
fastapi = { version = "0.110.1" }
flask-caching = { version = "2.1.0" }
flask-session = { version = "0.7.0" }
gunicorn = { version = "21.2.0" }
httpx = { version = "0.27.0" }
PyJWT = { version = "2.8.0" }
lazy-object-proxy = { version = "1.10.0" }
linkify-it-py = { version = "2.0.3" }
loguru = { version = "0.7.2" }
markdown = { version = "3.6" }
marshmallow-oneofschema = { version = "3.1.1" }
mdit-py-plugins = { version = "0.4.0" }
mlxtend = { version = "0.23.1" }
openpyxl = { version = "3.1.2" }
passlib = { version = "1.7.4" }
pendulum = { version = "3.0.0" }
polars = { version = "0.20.17" }
prometheus-fastapi-instrumentator = { version = "7.0.0" }
psutil = { version = "5.9.8" }
psycopg2-binary = { version = "2.9.9" }
pydantic-settings = { version = "2.2.1" }
python-daemon = { version = "3.0.1" }
python-jose = { version = "3.3.0" }
python-multipart = { version = "0.0.9" }
python-nvd3 = { version = "0.15.0" }
rfc3339-validator = { version = "0.1.4" }
rich-argparse = { version = "1.4.0" }
setproctitle = { version = "1.3.3" }
sqlalchemy-jsonfield = { version = "1.0.2" }
sqlmodel = { version = "0.0.18" }
sqlparse = { version = "0.4.4" }
tenacity = { version = "8.2.3" }
timy = { version = "0.4.2" }
toml = { version = "0.10.2" }
unicodecsv = { version = "0.14.1" }
uvicorn = { version = "0.15.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
