[tool.poetry]
name = "fastapi-API"
version = "0.0.1"
description = "A minimal repository for a FastAPI app instance with SQLModel and authentication routes"
authors = ["Bruno Peixoto <brunolnetto@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dev-dependencies]
black = { version = "24.4.2" }
codecov = { version = "2.1.13" }
pytest-asyncio = { version = "0.23.8" }
pytest-mock = { version = "3.14.0" }
pytest-watch = { version = "4.2.0" }

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
a2wsgi = "==1.10.7"
alembic = "==1.13.2"
apscheduler = "3.10.4"
bcrypt = "4.2.0"
email-validator = "^2.1.0-post.0"
emails = "0.6"
fastapi = "==0.112.0"
loguru = "==0.7.2"
threadpoolctl = "==3.5.0"
tenacity = "==8.5.0"
toml = "==0.10.2"
psycopg = {extras = ["binary"], version = "^3.1.13"}
prometheus-fastapi-instrumentator = "7.0.0"
PyJWT = "2.8.0"
python-decouple = "==3.8"
sqlmodel = "^0.0.21"
pydantic = "^2.3.0"
pydantic-settings = "^2.2.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.0.0"}
SQLAlchemy = "^2.0.0"
SQLAlchemy-JSONField = "==1.0.2"
SQLAlchemy-Utils = "==0.41.2"
starlette = "==0.37.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.4.0"
pre-commit = "^3.6.2"
types-passlib = "^1.7.7.20240106"
coverage = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
