[tool.poetry]
name = "fastapi-API"
version = "0.0.1"
description = "A minimal repository for a FastAPI app instance with SQLModel and authentication routes"
authors = ["Bruno Peixoto <brunolnetto@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dev-dependencies]
black = { version = "24.8.0" }
codecov = { version = "2.1.13" }
pytest-asyncio = { version = "0.23.8" }
pytest-mock = { version = "3.14.0" }
pytest-watch = { version = "4.2.0" }
python-daemon = "3.0.1"
python-jose = "3.3.0"
python-multipart = "0.0.9"
python-nvd3 = "0.16.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
a2wsgi = "==1.10.7"
about-time = "4.2.1"
aiohttp = "3.10.2"
aioredis = "2.0.1"
alembic = "==1.13.2"
apscheduler = "3.10.4"
argcomplete = "3.4.0"
asyncpg = "0.29.0"
black = "24.8.0"
bcrypt = "4.2.0"
cloudpickle = "3.0.0"
codecov = "2.1.13"
connexion = "3.1.0"
databases = "0.9.0"
dill = "0.3.8"
email-validator = "^2.1.0-post.0"
emails = "0.6"
execnet = "2.1.1"
fastapi = "==0.112.0"
flask-caching = "2.3.0"
flask-session = "0.8.0"
httpx = "0.27.0"
lazy-object-proxy = "1.10.0"
linkify-it-py = "2.0.3"
loguru = "==0.7.2"
markdown = "3.6"
marshmallow-oneofschema = "3.1.1"
mdit-py-plugins = "0.4.1"
mlxtend = "0.23.1"
openpyxl = "3.1.5"
passlib = "1.7.4"
pendulum = "3.0.0"
polars = "0.20.31"
tenacity = "==8.5.0"
toml = "==0.10.2"
prometheus-fastapi-instrumentator = "7.0.0"
psycopg = {extras = ["binary"], version = "^3.1.13"}
PyJWT = "==2.9.0"
python-decouple = "==3.8"
sqlmodel = "^0.0.21"
pydantic = "^2.3.0"
pydantic-settings = "^2.2.1"
rfc3339-validator = "==0.1.4"
rich-argparse = "==1.5.2"
sentry-sdk = {extras = ["fastapi"], version = "^2.0.0"}
SQLAlchemy = "^2.0.0"
SQLAlchemy-JSONField = "==1.0.2"
sqlparse = "==0.5.1"
unicodecsv = "==0.14.1"
uvicorn = "==0.30.5"
SQLAlchemy-Utils = "==0.41.2"
starlette = "==0.38.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.5.0"
pre-commit = "^3.6.2"
types-passlib = "^1.7.7.20240106"
coverage = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
